--- a/portfolio.html
+++ b/portfolio.html
@@ -5,29 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <!-- <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    /> -->
   </head>
   <body>
     <header>
       <nav>
-        <a href="#"> <span class="accent">Web</span>Studio</a>
-        <ul>
+        <a href="./index.html" class="logo">
+          <span class="accent">Web</span>Studio</a
+        >
+        <ul class="site-nav">
           <li>
-            <a href="studio.html">Студія</a>
+            <a class="link" href="./studio.html">Студія</a>
           </li>
           <li>
-            <a href="portfolio.html">Портфоліо</a>
+            <a class="link current" href="./portfolio.html">Портфоліо</a>
           </li>
           <li>
-            <a href="contacts.html">Контакти</a>
+            <a class="link" href="./contacts.html">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="auth-nav list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -35,7 +50,7 @@
     <main>
       <section>
         <h1>Портфоліо</h1>
-        <ul>
+        <ul class="portfolio-nav">
           <li><button type="button">Усі</button></li>
           <li><button type="button">Веб-сайти</button></li>
           <li><button type="button">Додатки</button></li>
@@ -44,8 +59,8 @@
         </ul>
         <ul>
           <li>
-            <a href="#"></a
-            ><img
+            <a href="#"></a>
+            <img
               src="./images/technokriak.jpeg"
               alt=""
               width="370"
@@ -55,8 +70,8 @@
             <p>Веб-сайт</p>
           </li>
           <li>
-            <a href="#"></a
-            ><img
+            <a href="#"></a>
+            <img
               src="./images/neworlean.jpeg"
               alt=""
               width="370"
@@ -122,7 +137,7 @@
     </main>
 
     <footer>
-      <a href=""> <span class="accent">Web</span>Studio</a>
+      <a href=""> <span>Web</span>Studio</a>
       <ul>
         <li>
           <a
