--- a/portfolio.html
+++ b/portfolio.html
@@ -18,12 +18,14 @@
     /> -->
   </head>
   <body>
+    <!-- Хедер -->
+
     <header>
       <nav>
         <a href="./index.html" class="logo">
-          <span class="accent">Web</span>Studio</a
+          <span class="logo-accent">Web</span>Studio</a
         >
-        <ul class="site-nav">
+        <ul class="site-nav list">
           <li>
             <a class="link" href="./studio.html">Студія</a>
           </li>
@@ -48,110 +50,139 @@
     </header>
 
     <main>
-      <section>
-        <h1>Портфоліо</h1>
-        <ul class="portfolio-nav">
-          <li><button type="button">Усі</button></li>
-          <li><button type="button">Веб-сайти</button></li>
-          <li><button type="button">Додатки</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+      <!-- Герой -->
+
+      <section class="section">
+        <h1 hidden>Портфоліо</h1>
+        <ul class="portfolio-nav list">
+          <li><button type="button" class="button">Веб-сайти</button></li>
+          <li><button type="button" class="button">Додатки</button></li>
+          <li><button type="button" class="button">Усі</button></li>
+          <li><button type="button" class="button">Дизайн</button></li>
+          <li><button type="button" class="button">Маркетинг</button></li>
         </ul>
-        <ul>
+        <ul class="portfolio list">
           <li>
-            <a href="#"></a>
-            <img
-              src="./images/technokriak.jpeg"
-              alt=""
-              width="370"
-              height="294"
-            />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <a href="#">
+              <img
+                src="./images/technokriak.jpeg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <a href="#"></a>
-            <img
-              src="./images/neworlean.jpeg"
-              alt=""
-              width="370"
-              height="294"
-            />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <a href="#">
+              <img
+                src="./images/neworlean.jpeg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <h2>Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+            </a>
           </li>
           <li>
-            <a href="#"></a
-            ><img src="./images/seafood.jpeg" alt="" width="370" height="294" />
-            <h2>Ресторан Seafood</h2>
-            <p>Додаток</p>
+            <a href="#">
+              <img
+                src="./images/seafood.jpeg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <h2>Ресторан Seafood</h2>
+              <p>Додаток</p>
+            </a>
           </li>
           <li>
-            <a href="#"></a
-            ><img src="./images/prime.jpeg" alt="" width="370" height="294" />
-            <h2>Проєкт Prime</h2>
-            <p>Маркетинг</p>
+            <a href="#">
+              <img src="./images/prime.jpeg" alt="" width="370" height="294" />
+              <h2>Проєкт Prime</h2>
+              <p>Маркетинг</p>
+            </a>
           </li>
           <li>
-            <a href="#"></a
-            ><img src="./images/boxes.jpeg" alt="" width="370" height="294" />
-            <h2>Проєкт Boxes</h2>
-            <p>Додаток</p>
+            <a href="#">
+              <img src="./images/boxes.jpeg" alt="" width="370" height="294" />
+              <h2>Проєкт Boxes</h2>
+              <p>Додаток</p>
+            </a>
           </li>
           <li>
-            <a href="#"></a
-            ><img
-              src="./images/inspiration.jpeg"
-              alt=""
-              width="370"
-              height="294"
-            />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <a href="#">
+              <img
+                src="./images/inspiration.jpeg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <h2>Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <a href="#"></a
-            ><img
-              src="./images/limitededition.jpeg"
-              alt=""
-              width="370"
-              height="294"
-            />
-            <h2>Видання Limited Edition</h2>
-            <p>Дизайн</p>
+            <a href="#">
+              <img
+                src="./images/limitededition.jpeg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <h2>Видання Limited Edition</h2>
+              <p>Дизайн</p>
+            </a>
           </li>
           <li>
-            <a href="#"></a
-            ><img src="./images/lab.jpeg" alt="" width="370" height="294" />
-            <h2>Проєкт LAB</h2>
-            <p>Маркетинг</p>
+            <a href="#">
+              <img src="./images/lab.jpeg" alt="" width="370" height="294" />
+              <h2>Проєкт LAB</h2>
+              <p>Маркетинг</p>
+            </a>
           </li>
           <li>
-            <a href="#"></a
-            ><img src="./images/growing.jpeg" alt="" width="370" height="294" />
-            <h2>Growing Business</h2>
-            <p>Додаток</p>
+            <a href="#">
+              <img
+                src="./images/growing.jpeg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <h2>Growing Business</h2>
+              <p>Додаток</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href=""> <span>Web</span>Studio</a>
-      <ul>
+    <!-- Підвал -->
+
+    <footer class="footer">
+      <a href="./index.html" class="logo">
+        <span class="logo-accent">Web</span>Studio
+      </a>
+      <ul class="footer-nav list">
         <li>
           <a
             href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
             target="_blank"
             rel="noopenner noreferrer nofollow"
-            >м. Київ, пр-т Лесі Українки, 26</a
+            class="link"
+          >
+            м. Київ, пр-т Лесі Українки, 26</a
           >
         </li>
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link">
+            info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link"> +38 096 111 11 11</a>
         </li>
       </ul>
     </footer>
