--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,7 @@
 
     <header>
       <nav>
-        <a href="./index.html" class="logo">
-          <span class="logo-accent">Web</span>Studio</a
-        >
+        <a href="#" class="logo"> <span class="logo-accent">Web</span>Studio</a>
         <ul class="site-nav list">
           <li>
             <a class="link" href="./studio.html">Студія</a>
@@ -63,95 +61,95 @@
         </ul>
         <ul class="portfolio list">
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/technokriak.jpeg"
                 alt=""
                 width="370"
                 height="294"
               />
-              <h2>Технокряк</h2>
+              <h2 class="link-title">Технокряк</h2>
               <p>Веб-сайт</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/neworlean.jpeg"
                 alt=""
                 width="370"
                 height="294"
               />
-              <h2>Постер New Orlean vs Golden Star</h2>
+              <h2 class="link-title">Постер New Orlean vs Golden Star</h2>
               <p>Дизайн</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/seafood.jpeg"
                 alt=""
                 width="370"
                 height="294"
               />
-              <h2>Ресторан Seafood</h2>
+              <h2 class="link-title">Ресторан Seafood</h2>
               <p>Додаток</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img src="./images/prime.jpeg" alt="" width="370" height="294" />
-              <h2>Проєкт Prime</h2>
+              <h2 class="link-title">Проєкт Prime</h2>
               <p>Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img src="./images/boxes.jpeg" alt="" width="370" height="294" />
-              <h2>Проєкт Boxes</h2>
+              <h2 class="link-title">Проєкт Boxes</h2>
               <p>Додаток</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/inspiration.jpeg"
                 alt=""
                 width="370"
                 height="294"
               />
-              <h2>Inspiration has no Borders</h2>
+              <h2 class="link-title">Inspiration has no Borders</h2>
               <p>Веб-сайт</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/limitededition.jpeg"
                 alt=""
                 width="370"
                 height="294"
               />
-              <h2>Видання Limited Edition</h2>
+              <h2 class="link-title">Видання Limited Edition</h2>
               <p>Дизайн</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img src="./images/lab.jpeg" alt="" width="370" height="294" />
-              <h2>Проєкт LAB</h2>
+              <h2 class="link-title">Проєкт LAB</h2>
               <p>Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/growing.jpeg"
                 alt=""
                 width="370"
                 height="294"
               />
-              <h2>Growing Business</h2>
+              <h2 class="link-title">Growing Business</h2>
               <p>Додаток</p>
             </a>
           </li>
@@ -162,9 +160,7 @@
     <!-- Підвал -->
 
     <footer class="footer">
-      <a href="./index.html" class="logo">
-        <span class="logo-accent">Web</span>Studio
-      </a>
+      <a href="#" class="logo"> <span class="logo-accent">Web</span>Studio </a>
       <ul class="footer-nav list">
         <li>
           <a
