--- a/index.html
+++ b/index.html
@@ -5,80 +5,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!-- Хедер -->
 
-    <header>
+    <!-------------------- Хедер -------------------->
+
+    <header class="header">
       <nav>
-        <a href="./index.html" class="logo"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
-
+        <a href="./index.html" class="logo link">
+          <span class="logo-accent">Web</span>Studio
+        </a>
         <ul class="site-nav list">
           <li>
-            <a class="link current" href="#">Студія</a>
+            <a class="site-nav-link link current" href="#">Студія</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link">Портфоліо</a>
+            <a href="./portfolio.html" class="site-nav-link link">Портфоліо</a>
           </li>
           <li>
-            <a href="#" class="link">Контакти</a>
+            <a href="#" class="site-nav-link link">Контакти</a>
           </li>
         </ul>
       </nav>
       <ul class="auth-nav list">
         <li>
-          <a href="mailto:info@devstudio.com" class="link"
+          <a href="mailto:info@devstudio.com" class="auth-nav-link link"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="auth-nav-link link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
-      <!-- шапка -->
+      <!------------------- hero ---------------->
 
-      <section class="section">
-        <h1 class="section-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="button">Замовити послугу</button>
+      <section class="hero
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="hero-button">Замовити послугу</button>
       </section>
 
-      <!-- особливості -->
+      <!---------------- особливості ---------------->
 
-      <section class="section">
-        <h2 hidden class="section-title">Особливості</h2>
-        <ul>
+      <section class="features">
+        <h2 hidden class="features-title">Особливості</h2>
+        <ul class="features-link list">
           <li>
-            <h3 class="section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+            <h3 class="features-item-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="feature-description">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3 class="section-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <h3 class="features-item-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="feature-description">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3 class="section-title">ПЛАНУВАННЯ</h3>
-            <p>
+            <h3 class="features-item-title">ПЛАНУВАННЯ</h3>
+            <p class="feature-description">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3 class="section-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+            <h3 class="features-item-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="feature-description">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -86,10 +89,11 @@
         </ul>
       </section>
 
-      <!-- чим ми займаємось -->
-      <section class="section">
-        <h2 hidden class="section-title">Чим ми займаємось</h2>
-        <ul class="list">
+      <!--------------- чим ми займаємось -------------->
+
+      <section class="work">
+        <h2 hidden class="work-title">Чим ми займаємось</h2>
+        <ul class="work-photo list">
           <li>
             <img
               src="./images/img1.jpeg"
@@ -117,11 +121,11 @@
         </ul>
       </section>
 
-      <!-- команда -->
+      <!------------------- команда ------------------->
 
-      <section class="section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team list">
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list list">
           <li>
             <img
               src="./images/team-img-1.jpeg"
@@ -129,8 +133,8 @@
               width="270"
               height="260"
             />
-            <h3 class="section-title">Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-list-title">Ігор Дем'яненко</h3>
+            <p lang="en" class="team-list-descr">Product Designer</p>
           </li>
           <li>
             <img
@@ -139,8 +143,8 @@
               width="270"
               height="260"
             />
-            <h3 class="section-title">Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-list-title">Ольга Рєпіна</h3>
+            <p lang="en" class="team-list-descr">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -149,8 +153,8 @@
               width="270"
               height="260"
             />
-            <h3 class="section-title">Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-list-title">Микола Тарасов</h3>
+            <p lang="en" class="team-list-descr">Marketing</p>
           </li>
           <li>
             <img
@@ -159,34 +163,36 @@
               width="270"
               height="260"
             />
-            <h3 class="section-title">Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-list-title">Михайло Єрмаков</h3>
+            <p lang="en" class="team-list-descr">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <!-- Підвал -->
+    <!--------------------- Підвал ------------------->
 
     <footer class="footer">
-      <a href="#" class="logo"> <span class="logo-accent">Web</span>Studio </a>
+      <a href="#" class="logo link">
+        <span class="logo-accent">Web</span>Studio 
+      </a>
       <ul class="footer-nav list">
         <li>
           <a
             href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
             target="_blank"
             rel="noopenner noreferrer nofollow"
-            class="link"
+            class="footer-nav-link link"
             >м. Київ, пр-т Лесі Українки, 26</a
           >
         </li>
         <li>
-          <a href="mailto:info@devstudio.com" class="link"
+          <a href="mailto:info@devstudio.com" class="footer-nav-link link"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="footer-nav-link link">+38 096 111 11 11</a>
         </li>
       </ul>
     </footer>
