--- a/portfolio.html
+++ b/portfolio.html
@@ -5,21 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <!-- <link
-      rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
-    /> -->
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!-- Хедер -->
-
+    <!---------------- Хедер ---------------->
     <header>
       <nav>
         <a href="#" class="logo"> <span class="logo-accent">Web</span>Studio</a>
