--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <section class="hero
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="hero-button">Замовити послугу</button>
+        <button type="button" class="button">Замовити послугу</button>
       </section>
 
       <!---------------- особливості ---------------->
