--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
       </ul>
     </header>
     <main>
-      <!------------------- hero ---------------->
+      <!-- ------------ hero -------------- -->
 
       <section class="hero
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="button">Замовити послугу</button>
       </section>
 
-      <!---------------- особливості ---------------->
+      <!-- ----------- особливості -------------- -->
 
       <section class="features">
         <h2 hidden class="features-title">Особливості</h2>
@@ -89,7 +89,7 @@
         </ul>
       </section>
 
-      <!--------------- чим ми займаємось -------------->
+      <!-- ------------- чим ми займаємось ------------ -->
 
       <section class="work">
         <h2 hidden class="work-title">Чим ми займаємось</h2>
@@ -121,7 +121,7 @@
         </ul>
       </section>
 
-      <!------------------- команда ------------------->
+      <!-- ----------- команда -------------- -->
 
       <section class="team">
         <h2 class="team-title">Наша команда</h2>
@@ -170,7 +170,7 @@
       </section>
     </main>
 
-    <!--------------------- Підвал ------------------->
+    <!-- --------------- Підвал ----------------- -->
 
     <footer class="footer">
       <a href="#" class="logo link">
