--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!---------------- Хедер ---------------->
     <header class="header">
       <nav>
         <a href="./index.html" class="logo link">
@@ -22,7 +21,7 @@
         </a>
         <ul class="site-nav list">
           <li>
-            <a class="site-nav-link link" href="#">Студія</a>
+            <a href="./index.html" class="site-nav-link link">Студія</a>
           </li>
           <li>
             <a href="./portfolio.html" class="site-nav-link link current"
@@ -165,8 +164,6 @@
         </ul>
       </section>
     </main>
-
-    <!-- Підвал -->
 
     <footer class="footer">
       <a href="#" class="logo link">
