--- a/portfolio.html
+++ b/portfolio.html
@@ -139,7 +139,7 @@
                 height="294"
               />
               <h2 class="link-title">Видання Limited Edition</h2>
-              <p>Дизайн</p>
+              <p link-descr>Дизайн</p>
             </a>
           </li>
           <li>
@@ -175,7 +175,7 @@
             href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
             target="_blank"
             rel="noopenner noreferrer nofollow"
-            class="footer-nav-link link"
+            class="footer-nav-link-adress link"
             >м. Київ, пр-т Лесі Українки, 26</a
           >
         </li>
