--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
             target="_blank"
             rel="noopenner noreferrer nofollow"
-            class="footer-nav-link link"
+            class="footer-nav-link-adress link"
             >м. Київ, пр-т Лесі Українки, 26</a
           >
         </li>
