edits to the homework

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,19 +14,17 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="header">
+    <header>
       <nav>
         <a href="./index.html" class="logo link">
           <span class="logo-accent">Web</span>Studio
         </a>
         <ul class="site-nav list">
           <li>
-            <a href="./index.html" class="site-nav-link link">Студія</a>
+            <a class="site-nav-link link current" href="#">Студія</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="site-nav-link link current"
-              >Портфоліо</a
-            >
+            <a href="./portfolio.html" class="site-nav-link link">Портфоліо</a>
           </li>
           <li>
             <a href="#" class="site-nav-link link">Контакти</a>
@@ -49,22 +47,22 @@
 
     <main>
       <section class="portfolio">
-        <h1 hidden>Портфоліо</h1>
+        <h1 class="visually-hidden">Портфоліо</h1>
         <ul class="portfolio-nav list">
           <li>
-            <button type="button" class="button">Веб-сайти</button>
+            <button type="button" class="portfolio-button">Веб-сайти</button>
           </li>
           <li>
-            <button type="button" class="button">Додатки</button>
+            <button type="button" class="portfolio-button">Додатки</button>
           </li>
           <li>
-            <button type="button" class="button">Усі</button>
+            <button type="button" class="portfolio-button">Усі</button>
           </li>
           <li>
-            <button type="button" class="button">Дизайн</button>
+            <button type="button" class="portfolio-button">Дизайн</button>
           </li>
           <li>
-            <button type="button" class="button">Маркетинг</button>
+            <button type="button" class="portfolio-button">Маркетинг</button>
           </li>
         </ul>
         <ul class="portfolio list">
@@ -139,7 +137,7 @@
                 height="294"
               />
               <h2 class="link-title">Видання Limited Edition</h2>
-              <p link-descr>Дизайн</p>
+              <p class="link-descr">Дизайн</p>
             </a>
           </li>
           <li>
@@ -166,10 +164,10 @@
     </main>
 
     <footer class="footer">
-      <a href="#" class="logo link">
-        <span class="logo-accent">Web</span>Studio
+      <a href="#" class="footer-logo link">
+        <span class="footer-logo-accent">Web</span>Studio
       </a>
-      <ul class="footer-nav list">
+      <ul class="footer-nav-adress list">
         <li>
           <a
             href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
