--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-
-    <!-------------------- Хедер -------------------->
-
-    <header class="header">
+    <header>
       <nav>
         <a href="./index.html" class="logo link">
           <span class="logo-accent">Web</span>Studio
@@ -42,46 +39,45 @@
           >
         </li>
         <li>
-          <a href="tel:+380961111111" class="auth-nav-link link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="auth-nav-link link"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
-    <main>
-      <!-- ------------ hero -------------- -->
 
-      <section class="hero
+    <main>
+      <section class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="button">Замовити послугу</button>
+        <button type="button" class="hero-button">Замовити послугу</button>
       </section>
 
-      <!-- ----------- особливості -------------- -->
-
       <section class="features">
-        <h2 hidden class="features-title">Особливості</h2>
+        <h2 class="features-title visually-hidden">Особливості</h2>
         <ul class="features-link list">
           <li>
             <h3 class="features-item-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="feature-description">
+            <p class="feature-descr">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
             <h3 class="features-item-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="feature-description">
+            <p class="feature-descr">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
             <h3 class="features-item-title">ПЛАНУВАННЯ</h3>
-            <p class="feature-description">
+            <p class="feature-descr">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
             <h3 class="features-item-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="feature-description">
+            <p class="feature-descr">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -89,10 +85,8 @@
         </ul>
       </section>
 
-      <!-- ------------- чим ми займаємось ------------ -->
-
       <section class="work">
-        <h2 hidden class="work-title">Чим ми займаємось</h2>
+        <h2 class="work-title visually-hidden">Чим ми займаємось</h2>
         <ul class="work-photo list">
           <li>
             <img
@@ -121,12 +115,10 @@
         </ul>
       </section>
 
-      <!-- ----------- команда -------------- -->
-
       <section class="team">
         <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li>
+        <ul class="list">
+          <li class="team-list">
             <img
               src="./images/team-img-1.jpeg"
               alt="фото Ігоря Дем'яненка"
@@ -136,7 +128,7 @@
             <h3 class="team-list-title">Ігор Дем'яненко</h3>
             <p lang="en" class="team-list-descr">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/team-img-2.jpeg"
               alt="фото Ольги Рєпіної"
@@ -146,7 +138,7 @@
             <h3 class="team-list-title">Ольга Рєпіна</h3>
             <p lang="en" class="team-list-descr">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/team-img-3.jpeg"
               alt="фото Миколи Тарасова"
@@ -156,7 +148,7 @@
             <h3 class="team-list-title">Микола Тарасов</h3>
             <p lang="en" class="team-list-descr">Marketing</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/team-img-4.jpeg"
               alt="фото Михайла Єрмакова"
@@ -170,13 +162,11 @@
       </section>
     </main>
 
-    <!-- --------------- Підвал ----------------- -->
-
     <footer class="footer">
-      <a href="#" class="logo link">
-        <span class="logo-accent">Web</span>Studio 
+      <a href="#" class="footer-logo link">
+        <span class="footer-logo-accent">Web</span>Studio
       </a>
-      <ul class="footer-nav list">
+      <ul class="footer-nav-adress list">
         <li>
           <a
             href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
@@ -192,7 +182,9 @@
           >
         </li>
         <li>
-          <a href="tel:+380961111111" class="footer-nav-link link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="footer-nav-link link"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </footer>
