edits to the hw

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </a>
         <ul class="site-nav list">
           <li>
-            <a class="site-nav-link link current" href="#">Студія</a>
+            <a href="./index.html" class="site-nav-link link current">Студія</a>
           </li>
           <li>
             <a href="./portfolio.html" class="site-nav-link link">Портфоліо</a>
