--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,12 @@
         </a>
         <ul class="site-nav list">
           <li>
-            <a class="site-nav-link link current" href="#">Студія</a>
+            <a href="./index.html" class="site-nav-link link">Студія</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="site-nav-link link">Портфоліо</a>
+            <a href="./portfolio.html" class="site-nav-link link current"
+              >Портфоліо</a
+            >
           </li>
           <li>
             <a href="#" class="site-nav-link link">Контакти</a>
