--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </section>
 
       <section class="work">
-        <h2 class="work-title visually-hidden">Чим ми займаємось</h2>
+        <h2 class="work-title">Чим ми займаємось</h2>
         <ul class="work-photo list">
           <li>
             <img
